[package]
name = "smtp-message"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT OR Apache-2.0"
categories = ["email", "network-programming", "parser-implementations"]
keywords = ["parser", "builder", "smtp", "email"]
description = "Line-oriented parser and builder for SMTP protocol messages"
readme = "../README.md"
repository = "https://github.com/median-kliniken/kannader"
edition = "2018"

[features]
fuzz-targets = []

[dependencies]
auto_enums = "0.8.7"
futures = "0.3.31"
idna = "1.0.3"
lazy_static = "1.5"
nom = "7.1"
pin-project = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }
regex-automata = "0.1.10"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
itertools = "0.14.0"
